--- a/frontend/CodeMaxxer/src/pages/Dashboard/styles/dashboard.module.css
+++ b/frontend/CodeMaxxer/src/pages/Dashboard/styles/dashboard.module.css
@@ -86,5 +86,6 @@
 @media (max-width: 1024px) {
     .content {
         padding: 0;
+        overflow-y: auto;
     }
 }
